# rust_rbac_authen_service

./: .env  Cargo.toml  diesel.toml  seed.sql
migrations/2025-07-17-035702_create_rbac/: down.sql  up.sql
src/: config.rs  database.rs  main.rs  schema.rs
src/handlers/: auth.rs  mod.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
src/middlewares/: jwt.rs
src/models/: mod.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
src/repositories/: permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
src/routes/: auth.rs  mod.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
src/utilities/: encryption.rs  error.rs  mod.rs
